# small-agent

./: .env.example  .gitignore  README.md  pyproject.toml
agent_pure_python/src/: agent.py  overall_agent.ipynb  process_queries.py  python_code.py  search.py
company_research_tool/src/: agent.py  prompts.py  research_agent.ipynb  research_agent.py
essay_writer_agent/src/: agent.py  check_simple_agent.ipynb  gui.py  prompts.py  use_gui.ipynb  use_gui.py  writer_agent.ipynb
langgraph_agent/src/: writer_agent.ipynb
src/: agent.py  check_simple_agent.ipynb  process_queries.py  simple_agent.ipynb
