[tool.poetry]
name = "Agent"
version = "0.1.0"
description = "Agent"
authors = ["andrei-gorbatch <gorbatch.andrei@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
python-dotenv = "^1.0.0"
pandas = "^2.2.3"
langgraph = "^0.2.64"
langchain-core = "^0.3.30"
langchain-openai = "^0.3.0"
langchain-community = "^0.3.14"
ipython = "^8.31.0"
graphviz = "^0.20.3"
pillow = "^11.1.0"
bs4 = "^0.0.2"
lxml = "^5.3.0"
langgraph-checkpoint-sqlite = "^2.0.3"
tavily-python = "^0.5.0"
aiosqlite = "^0.20.0"
gradio = "^5.13.1"

[tool.poetry.group.dev.dependencies]
jupyter_black = "*"
ipykernel = "*"
jupyter = "*"
matplotlib = "^3.6.2"

[tool.poetry.group.test.dependencies]
pytest = "*"
black = "*"
isort = "*"
import-linter = "*"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"